crud tf and series done

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -170,8 +170,8 @@ select.form-control:not([size]):not([multiple]),
   height: 42px; }
 
 textarea.form-control {
-  height: 64px !important; }
-
+  /* height: 64px !important; } */
+}
 .custom-control {
   line-height: 1.6rem; }
 
